# remarkable-spec

./: .gitignore  CLAUDE.md  LICENSE  README.md  lefthook.yml  mise.toml  pyproject.toml
src/remarkable_spec/: __init__.py
src/remarkable_spec/cli/: __init__.py  _resolve.py  _util.py  annotations_cmd.py  device_cmd.py  diagram_cmd.py  env_cmd.py  inspect_cmd.py  ls_cmd.py  ocr_cmd.py  render_cmd.py  search_cmd.py  sync_cmd.py  tree_cmd.py
src/remarkable_spec/device/: __init__.py  connection.py  paths.py  push.py  sync.py  web_api.py
src/remarkable_spec/export/: __init__.py  pdf.py  png.py  svg.py
src/remarkable_spec/formats/: __init__.py  content.py  document_loader.py  metadata.py  pagedata.py  rm_file.py
src/remarkable_spec/models/: __init__.py  color.py  document.py  page.py  pen.py  screen.py  stroke.py  template.py
src/remarkable_spec/ocr/: __init__.py  diagram.py  pipeline.py  postprocess.py  textract.py  vision.py
src/remarkable_spec/render/: __init__.py  engine.py  palette.py  pdf_bg.py  pens.py
src/remarkable_spec/sync/: __init__.py  db.py  hasher.py  migrations.py  models.py
