[project]
name = "remarkable-spec"
version = "0.1.0"
description = "Python library and CLI for reMarkable tablet file formats, device access, and rendering"
readme = "README.md"
authors = [
    { name = "Laith Al-Saadoon", email = "9553966+theagenticguy@users.noreply.github.com" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "rmscene>=0.7.0,<0.8.0",
    "cyclopts>=3.0.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.24.0",
]

[project.scripts]
rmspec = "remarkable_spec.cli:app"

[project.optional-dependencies]
render = [
    "cairocffi>=1.7.0",
    "cairosvg>=2.7.0",
    "pillow>=10.0.0",
]
device = [
    "paramiko>=3.4.0",
    "httpx>=0.27.0",
]
push = [
    "weasyprint>=62.0",
    "markdown>=3.6",
]
aws = [
    "boto3>=1.42.59",
]
all = [
    "remarkable-spec[render,device,ocr,push,aws]",
]
ocr = [
    "pyobjc-framework-quartz>=12.1",
    "pyobjc-framework-vision>=12.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pyright>=1.1",
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "RUF022",  # __all__ sorted — we group by category instead
    "N806",    # Vision/Quartz are module-level imports, not variables
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
